# SovereignLifeOS

./: .gitignore  README.md
core/: Cargo.toml  build-ios.sh  build_ios.sh
core/src/: lib.rs
ios_libs/: sovereign_core.swift
ios_libs/Headers/: sovereign_coreFFI.h
ios_libs/SovereignCore.xcframework/: Info.plist
ios_libs/SovereignCore.xcframework/ios-arm64-simulator/Headers/: sovereign_coreFFI.h
ios_libs/SovereignCore.xcframework/ios-arm64/Headers/: module.modulemap  sovereign_coreFFI.h
