[package]
name = "sovereign_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "sovereign_core"

[dependencies]
uniffi = { version = "0.25", features = ["cli"] }
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
